--- a/evaluation-service/frontend/overview.html
+++ b/evaluation-service/frontend/overview.html
@@ -3,56 +3,274 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Teacher Overview</title>
+  <title>Teacher Overview - Advanced Analytics</title>
 
   <!-- Chart.js (allowed by your CSP setHeaders using jsdelivr) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#fafafa;margin:0;padding:24px;color:#111}
-    .container{max-width:1100px;margin:0 auto}
-    .header{display:flex;align-items:center;gap:16px;margin-bottom:16px}
-    .avatar{width:56px;height:56px;border-radius:999px;background:#e5e7eb}
-    h1{font-size:22px;margin:0}
-    .sub{color:#666;margin:4px 0 0}
-    .pill{display:inline-block;background:#6366f1;color:#fff;font-size:12px;padding:3px 8px;border-radius:999px}
-    .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-top:18px}
-    .card{background:#fff;border-radius:14px;box-shadow:0 1px 6px rgba(0,0,0,.08);padding:12px 14px}
-    .label{font-size:12px;color:#6b7280;margin-bottom:6px}
-    .value{font-size:22px;font-weight:700}
-    .row{display:grid;grid-template-columns:1.2fr 1fr;gap:16px;margin-top:18px}
-    canvas{background:#fff;border-radius:14px;box-shadow:0 1px 6px rgba(0,0,0,.08);padding:10px}
-    .note{font-size:13px;color:#555;margin-top:10px}
+    * { box-sizing: border-box; }
+    body {
+      font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      margin: 0;
+      padding: 24px;
+      color: #111;
+      min-height: 100vh;
+    }
+    .container {
+      max-width: 1400px;
+      margin: 0 auto;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+      margin-bottom: 32px;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      padding: 24px;
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+    }
+    .avatar {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 32px;
+      font-weight: 700;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+    }
+    .teacher-info h1 {
+      font-size: 32px;
+      margin: 0;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+    .sub {
+      color: #6b7280;
+      margin: 8px 0 0;
+      font-size: 16px;
+    }
+    .pill {
+      display: inline-block;
+      background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+      color: #fff;
+      font-size: 14px;
+      padding: 6px 16px;
+      border-radius: 20px;
+      font-weight: 600;
+      margin-top: 8px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 24px;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      padding: 24px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
+    }
+    .label {
+      font-size: 14px;
+      color: #6b7280;
+      margin-bottom: 8px;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+    .value {
+      font-size: 28px;
+      font-weight: 700;
+      color: #1f2937;
+      margin-bottom: 4px;
+    }
+    .trend {
+      font-size: 12px;
+      color: #10b981;
+      font-weight: 600;
+    }
+    .row {
+      display: grid;
+      grid-template-columns: 1.2fr 1fr;
+      gap: 24px;
+      margin-top: 24px;
+    }
+    .chart-container {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      padding: 24px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    canvas {
+      max-height: 400px;
+    }
+    .note {
+      font-size: 14px;
+      color: #6b7280;
+      margin-top: 16px;
+      padding: 16px;
+      background: rgba(59, 130, 246, 0.1);
+      border-radius: 8px;
+      border-left: 4px solid #3b82f6;
+    }
+    .time-series {
+      margin-top: 24px;
+    }
+    .time-series h3 {
+      color: #1f2937;
+      margin-bottom: 16px;
+      font-size: 20px;
+    }
+    .loading {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 200px;
+      font-size: 16px;
+      color: #6b7280;
+    }
+    .spinner {
+      width: 24px;
+      height: 24px;
+      border: 3px solid #e5e7eb;
+      border-top: 3px solid #3b82f6;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-right: 12px;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    .comparison-section {
+      margin-top: 32px;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      padding: 24px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    .comparison-section h3 {
+      color: #1f2937;
+      margin-bottom: 20px;
+      font-size: 20px;
+    }
+    .comparison-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 16px;
+    }
+    .comparison-card {
+      background: #f8fafc;
+      border-radius: 12px;
+      padding: 16px;
+      border: 1px solid #e2e8f0;
+    }
+    .comparison-card h4 {
+      margin: 0 0 8px 0;
+      color: #1f2937;
+      font-size: 16px;
+    }
+    .comparison-score {
+      font-size: 24px;
+      font-weight: 700;
+      color: #3b82f6;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <!-- header -->
     <div class="header">
-      <div class="avatar"></div>
-      <div>
-        <h1 id="name"></h1>
+      <div class="avatar" id="avatar"></div>
+      <div class="teacher-info">
+        <h1 id="name">Loading...</h1>
         <div class="sub">
-          <span id="overall"></span>
-          <span class="pill" id="period"></span>
+          <span id="overall">—</span>
+          <span class="pill" id="period">—</span>
         </div>
       </div>
     </div>
 
     <!-- cards -->
     <div class="grid">
-      <div class="card"><div class="label">Teaching Effectiveness</div><div class="value" id="teaching">—</div></div>
-      <div class="card"><div class="label">Research Output</div>      <div class="value" id="research">—</div></div>
-      <div class="card"><div class="label">Service Contribution</div>  <div class="value" id="service">—</div></div>
-      <div class="card"><div class="label">Grant Funding</div>         <div class="value" id="grant">—</div></div>
+      <div class="card">
+        <div class="label">Teaching Effectiveness</div>
+        <div class="value" id="teaching">—</div>
+        <div class="trend" id="teaching-trend">—</div>
+      </div>
+      <div class="card">
+        <div class="label">Research Output</div>
+        <div class="value" id="research">—</div>
+        <div class="trend" id="research-trend">—</div>
+      </div>
+      <div class="card">
+        <div class="label">Service Contribution</div>
+        <div class="value" id="service">—</div>
+        <div class="trend" id="service-trend">—</div>
+      </div>
+      <div class="card">
+        <div class="label">Grant Funding</div>
+        <div class="value" id="grant">—</div>
+        <div class="trend" id="grant-trend">—</div>
+      </div>
     </div>
 
-    <!-- radar -->
+    <!-- radar and time series -->
     <div class="row">
-      <canvas id="radar" height="240"></canvas>
-      <div class="note">
-        This is a minimal demo view rendered from <code>/api/eval/teachers/:id/overview</code>.
+      <div class="chart-container">
+        <h3>Performance Radar</h3>
+        <canvas id="radar" height="300"></canvas>
       </div>
+      <div class="chart-container">
+        <h3>Score Trend</h3>
+        <canvas id="timeSeries" height="300"></canvas>
+      </div>
+    </div>
+
+    <!-- Time Series Analysis -->
+    <div class="time-series">
+      <h3>Historical Performance Analysis</h3>
+      <div id="timeSeriesData" class="loading">
+        <div class="spinner"></div>
+        Loading historical data...
+      </div>
+    </div>
+
+    <!-- Comparison Section -->
+    <div class="comparison-section">
+      <h3>Peer Comparison</h3>
+      <div id="comparisonData" class="loading">
+        <div class="spinner"></div>
+        Loading comparison data...
+      </div>
+    </div>
+
+    <div class="note">
+      <strong>Advanced Analytics Dashboard</strong><br>
+      This comprehensive view includes time series analysis, peer comparison, and detailed performance metrics.
+      Data is rendered from <code>/api/eval/teachers/:id/overview</code> and <code>/api/eval/analytics/*</code> endpoints.
     </div>
   </div>
 
