--- a/evaluation-service/frontend/overview.html
+++ b/evaluation-service/frontend/overview.html
@@ -3,30 +3,33 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Teacher Overview - Advanced Analytics</title>
+  <title>Teacher Evaluation - Multi-Tab Interface</title>
 
-  <!-- Chart.js (allowed by your CSP setHeaders using jsdelivr) -->
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
   <style>
     * { box-sizing: border-box; }
     body {
       font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
       margin: 0;
-      padding: 24px;
+      padding: 0;
       color: #111;
       min-height: 100vh;
     }
     .container {
       max-width: 1400px;
       margin: 0 auto;
+      padding: 24px;
     }
+    
+    /* Header with teacher info */
     .header {
       display: flex;
       align-items: center;
       gap: 24px;
-      margin-bottom: 32px;
+      margin-bottom: 24px;
       background: rgba(255, 255, 255, 0.95);
       backdrop-filter: blur(10px);
       padding: 24px;
@@ -37,19 +40,19 @@
       width: 80px;
       height: 80px;
       border-radius: 50%;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
       font-size: 32px;
       font-weight: 700;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 16px rgba(99, 102, 241, 0.3);
     }
     .teacher-info h1 {
-      font-size: 32px;
+      font-size: 28px;
       margin: 0;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -58,22 +61,80 @@
       color: #6b7280;
       margin: 8px 0 0;
       font-size: 16px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+    .overall-score {
+      font-size: 24px;
+      font-weight: 700;
+      color: #6366f1;
     }
     .pill {
       display: inline-block;
       background: linear-gradient(135deg, #10b981 0%, #059669 100%);
       color: #fff;
-      font-size: 14px;
-      padding: 6px 16px;
-      border-radius: 20px;
+      font-size: 13px;
+      padding: 4px 12px;
+      border-radius: 12px;
       font-weight: 600;
-      margin-top: 8px;
     }
+
+    /* Tab Navigation */
+    .tab-navigation {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      padding: 8px;
+      margin-bottom: 24px;
+      display: flex;
+      gap: 8px;
+      overflow-x: auto;
+    }
+    .tab-button {
+      flex: 1;
+      min-width: 120px;
+      padding: 12px 20px;
+      border: none;
+      background: transparent;
+      color: #6b7280;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      border-radius: 12px;
+      transition: all 0.3s ease;
+      white-space: nowrap;
+    }
+    .tab-button:hover {
+      background: rgba(99, 102, 241, 0.1);
+      color: #6366f1;
+    }
+    .tab-button.active {
+      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
+      color: white;
+      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+    }
+
+    /* Tab Content */
+    .tab-content {
+      display: none;
+    }
+    .tab-content.active {
+      display: block;
+      animation: fadeIn 0.3s ease;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Cards Grid */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      margin-top: 24px;
+      margin-bottom: 24px;
     }
     .card {
       background: rgba(255, 255, 255, 0.95);
@@ -89,29 +150,36 @@
       box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
     }
     .label {
-      font-size: 14px;
+      font-size: 13px;
       color: #6b7280;
       margin-bottom: 8px;
-      font-weight: 500;
+      font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 0.5px;
     }
     .value {
-      font-size: 28px;
+      font-size: 32px;
       font-weight: 700;
       color: #1f2937;
       margin-bottom: 4px;
     }
     .trend {
-      font-size: 12px;
-      color: #10b981;
+      font-size: 13px;
       font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 4px;
     }
-    .row {
+    .trend.up { color: #10b981; }
+    .trend.down { color: #ef4444; }
+    .trend.neutral { color: #6b7280; }
+
+    /* Chart Container */
+    .chart-row {
       display: grid;
       grid-template-columns: 1.2fr 1fr;
       gap: 24px;
-      margin-top: 24px;
+      margin-bottom: 24px;
     }
     .chart-container {
       background: rgba(255, 255, 255, 0.95);
@@ -121,26 +189,112 @@
       padding: 24px;
       border: 1px solid rgba(255, 255, 255, 0.2);
     }
-    canvas {
-      max-height: 400px;
+    .chart-container h3 {
+      margin: 0 0 20px 0;
+      color: #1f2937;
+      font-size: 18px;
+      font-weight: 600;
     }
-    .note {
+    canvas {
+      max-height: 350px;
+    }
+
+    /* Table Styles */
+    .data-table {
+      width: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      padding: 24px;
+      margin-bottom: 24px;
+      overflow-x: auto;
+    }
+    .data-table h3 {
+      margin: 0 0 20px 0;
+      color: #1f2937;
+      font-size: 18px;
+      font-weight: 600;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    thead {
+      background: #f8fafc;
+      border-radius: 8px;
+    }
+    th {
+      padding: 12px;
+      text-align: left;
+      font-size: 13px;
+      font-weight: 600;
+      color: #6b7280;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+    td {
+      padding: 16px 12px;
+      border-top: 1px solid #e5e7eb;
+      color: #1f2937;
+      font-size: 14px;
+    }
+    tr:hover {
+      background: #f8fafc;
+    }
+
+    /* Timeline Styles */
+    .timeline {
+      position: relative;
+      padding-left: 40px;
+    }
+    .timeline::before {
+      content: '';
+      position: absolute;
+      left: 15px;
+      top: 0;
+      bottom: 0;
+      width: 2px;
+      background: linear-gradient(180deg, #6366f1 0%, #8b5cf6 100%);
+    }
+    .timeline-item {
+      position: relative;
+      margin-bottom: 32px;
+      padding: 20px;
+      background: #f8fafc;
+      border-radius: 12px;
+      border-left: 4px solid #6366f1;
+    }
+    .timeline-item::before {
+      content: '';
+      position: absolute;
+      left: -47px;
+      top: 24px;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: #6366f1;
+      border: 3px solid white;
+      box-shadow: 0 0 0 2px #6366f1;
+    }
+    .timeline-date {
+      font-size: 13px;
+      color: #6366f1;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    .timeline-title {
+      font-size: 16px;
+      font-weight: 600;
+      color: #1f2937;
+      margin-bottom: 4px;
+    }
+    .timeline-desc {
       font-size: 14px;
       color: #6b7280;
-      margin-top: 16px;
-      padding: 16px;
-      background: rgba(59, 130, 246, 0.1);
-      border-radius: 8px;
-      border-left: 4px solid #3b82f6;
     }
-    .time-series {
-      margin-top: 24px;
-    }
-    .time-series h3 {
-      color: #1f2937;
-      margin-bottom: 16px;
-      font-size: 20px;
-    }
+
+    /* Loading Spinner */
     .loading {
       display: flex;
       align-items: center;
@@ -153,7 +307,7 @@
       width: 24px;
       height: 24px;
       border: 3px solid #e5e7eb;
-      border-top: 3px solid #3b82f6;
+      border-top: 3px solid #6366f1;
       border-radius: 50%;
       animation: spin 1s linear infinite;
       margin-right: 12px;
@@ -162,119 +316,202 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-    .comparison-section {
-      margin-top: 32px;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      border-radius: 16px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      padding: 24px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
+
+    /* Empty State */
+    .empty-state {
+      text-align: center;
+      padding: 60px 20px;
+      color: #6b7280;
     }
-    .comparison-section h3 {
-      color: #1f2937;
-      margin-bottom: 20px;
-      font-size: 20px;
+    .empty-state-icon {
+      font-size: 48px;
+      margin-bottom: 16px;
+      opacity: 0.5;
     }
-    .comparison-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 16px;
-    }
-    .comparison-card {
-      background: #f8fafc;
-      border-radius: 12px;
-      padding: 16px;
-      border: 1px solid #e2e8f0;
-    }
-    .comparison-card h4 {
-      margin: 0 0 8px 0;
-      color: #1f2937;
+    .empty-state-text {
       font-size: 16px;
+      font-weight: 500;
     }
-    .comparison-score {
-      font-size: 24px;
-      font-weight: 700;
-      color: #3b82f6;
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .chart-row {
+        grid-template-columns: 1fr;
+      }
+      .tab-navigation {
+        overflow-x: scroll;
+      }
+      .tab-button {
+        flex: 0 0 auto;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- header -->
+    <!-- Header with teacher info -->
     <div class="header">
-      <div class="avatar" id="avatar"></div>
+      <div class="avatar" id="avatar">?</div>
       <div class="teacher-info">
         <h1 id="name">Loading...</h1>
         <div class="sub">
-          <span id="overall">—</span>
+          <span>Overall Evaluation: <span class="overall-score" id="overall">—</span>/5</span>
           <span class="pill" id="period">—</span>
         </div>
       </div>
     </div>
 
-    <!-- cards -->
-    <div class="grid">
-      <div class="card">
-        <div class="label">Teaching Effectiveness</div>
-        <div class="value" id="teaching">—</div>
-        <div class="trend" id="teaching-trend">—</div>
-      </div>
-      <div class="card">
-        <div class="label">Research Output</div>
-        <div class="value" id="research">—</div>
-        <div class="trend" id="research-trend">—</div>
-      </div>
-      <div class="card">
-        <div class="label">Service Contribution</div>
-        <div class="value" id="service">—</div>
-        <div class="trend" id="service-trend">—</div>
-      </div>
-      <div class="card">
-        <div class="label">Grant Funding</div>
-        <div class="value" id="grant">—</div>
-        <div class="trend" id="grant-trend">—</div>
-      </div>
+    <!-- Tab Navigation -->
+    <div class="tab-navigation">
+      <button class="tab-button active" data-tab="overview">📊 Overview</button>
+      <button class="tab-button" data-tab="teaching">👨‍🏫 Teaching</button>
+      <button class="tab-button" data-tab="research">🔬 Research</button>
+      <button class="tab-button" data-tab="service">🤝 Service</button>
+      <button class="tab-button" data-tab="professional">🎓 Professional</button>
+      <button class="tab-button" data-tab="career">💼 Career</button>
     </div>
 
-    <!-- radar and time series -->
-    <div class="row">
-      <div class="chart-container">
-        <h3>Performance Radar</h3>
-        <canvas id="radar" height="300"></canvas>
+    <!-- Tab: Overview -->
+    <div class="tab-content active" id="tab-overview">
+      <!-- Key Metrics Cards -->
+      <div class="grid">
+        <div class="card">
+          <div class="label">Teaching Effectiveness</div>
+          <div class="value" id="teaching">—</div>
+          <div class="trend" id="teaching-trend">—</div>
+        </div>
+        <div class="card">
+          <div class="label">Research Output</div>
+          <div class="value" id="research">—</div>
+          <div class="trend" id="research-trend">—</div>
+        </div>
+        <div class="card">
+          <div class="label">Service Contribution</div>
+          <div class="value" id="service">—</div>
+          <div class="trend" id="service-trend">—</div>
+        </div>
+        <div class="card">
+          <div class="label">Grant Funding</div>
+          <div class="value" id="grant">—</div>
+          <div class="trend" id="grant-trend">—</div>
+        </div>
       </div>
-      <div class="chart-container">
-        <h3>Score Trend</h3>
-        <canvas id="timeSeries" height="300"></canvas>
-      </div>
-    </div>
 
-    <!-- Time Series Analysis -->
-    <div class="time-series">
-      <h3>Historical Performance Analysis</h3>
-      <div id="timeSeriesData" class="loading">
-        <div class="spinner"></div>
-        Loading historical data...
+      <!-- Charts -->
+      <div class="chart-row">
+        <div class="chart-container">
+          <h3>Performance Radar</h3>
+          <canvas id="radar"></canvas>
+        </div>
+        <div class="chart-container">
+          <h3>Score Trend</h3>
+          <canvas id="timeSeries"></canvas>
+        </div>
       </div>
-    </div>
 
-    <!-- Comparison Section -->
-    <div class="comparison-section">
+    <!-- Peer Comparison -->
+    <div class="chart-container">
       <h3>Peer Comparison</h3>
       <div id="comparisonData" class="loading">
         <div class="spinner"></div>
         Loading comparison data...
       </div>
     </div>
+    </div>
 
-    <div class="note">
-      <strong>Advanced Analytics Dashboard</strong><br>
-      This comprehensive view includes time series analysis, peer comparison, and detailed performance metrics.
-      Data is rendered from <code>/api/eval/teachers/:id/overview</code> and <code>/api/eval/analytics/*</code> endpoints.
+    <!-- Tab: Teaching -->
+    <div class="tab-content" id="tab-teaching">
+      <div class="data-table">
+        <h3>Courses Taught</h3>
+        <div id="coursesTable" class="loading">
+          <div class="spinner"></div>
+          Loading courses...
+        </div>
+      </div>
+
+      <div class="chart-container">
+        <h3>Student Evaluation Trends</h3>
+        <canvas id="studentEvalChart"></canvas>
+      </div>
+    </div>
+
+    <!-- Tab: Research -->
+    <div class="tab-content" id="tab-research">
+      <div class="data-table">
+        <h3>Publications</h3>
+        <div id="publicationsTable" class="loading">
+          <div class="spinner"></div>
+          Loading publications...
+        </div>
+      </div>
+
+      <div class="data-table">
+        <h3>Grant Funding</h3>
+        <div id="grantsTable" class="loading">
+          <div class="spinner"></div>
+          Loading grants...
+        </div>
+      </div>
+    </div>
+
+    <!-- Tab: Service -->
+    <div class="tab-content" id="tab-service">
+      <div class="data-table">
+        <h3>Committee Work</h3>
+        <div id="committeeTable" class="loading">
+          <div class="spinner"></div>
+          Loading committee work...
+        </div>
+      </div>
+
+      <div class="data-table">
+        <h3>Community Contributions</h3>
+        <div id="communityTable" class="loading">
+          <div class="spinner"></div>
+          Loading community contributions...
+        </div>
+      </div>
+    </div>
+
+    <!-- Tab: Professional -->
+    <div class="tab-content" id="tab-professional">
+      <div class="data-table">
+        <h3>Education History</h3>
+        <div id="educationTable" class="loading">
+          <div class="spinner"></div>
+          Loading education history...
+        </div>
+      </div>
+
+      <div class="data-table">
+        <h3>Certifications & Professional Development</h3>
+        <div id="certificationsTable" class="loading">
+          <div class="spinner"></div>
+          Loading certifications...
+        </div>
+      </div>
+    </div>
+
+    <!-- Tab: Career -->
+    <div class="tab-content" id="tab-career">
+      <div class="chart-container">
+        <h3>Employment Timeline</h3>
+        <div id="careerTimeline" class="loading">
+          <div class="spinner"></div>
+          Loading career timeline...
+        </div>
+      </div>
+
+      <div class="data-table">
+        <h3>Awards & Recognition</h3>
+        <div id="awardsTable" class="loading">
+          <div class="spinner"></div>
+          Loading awards...
+        </div>
+      </div>
     </div>
   </div>
 
-  <!-- your script -->
   <script src="./overview.js"></script>
 </body>
 </html>
