--- a/evaluation-service/frontend/dashboard.html
+++ b/evaluation-service/frontend/dashboard.html
@@ -12,7 +12,7 @@
     * { box-sizing: border-box; }
     body {
       font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
       margin: 0;
       padding: 24px;
       color: #111;
@@ -33,10 +33,12 @@
     .header h1 {
       margin: 0;
       font-size: 32px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      font-weight: 700;
+      background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      letter-spacing: -0.5px;
     }
     .stats-grid {
       display: grid;
