--- a/evaluation-service/frontend/overview.html
+++ b/evaluation-service/frontend/overview.html
@@ -113,7 +113,8 @@
     .tab-button.active {
       background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
       color: white;
-      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
+      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.4);
+      transform: translateY(-1px);
     }
 
     /* Tab Content */
