--- a/evaluation-service/frontend/overview.html
+++ b/evaluation-service/frontend/overview.html
@@ -209,17 +209,36 @@
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       padding: 24px;
       margin-bottom: 24px;
+      min-height: 280px;
+      max-height: 800px;
+      overflow-y: auto;
       overflow-x: auto;
     }
+    .data-table > *:first-child {
+      margin-top: 0 !important;
+    }
+    .data-table > div {
+      margin-top: 0 !important;
+      padding-top: 0 !important;
+    }
     .data-table h3 {
-      margin: 0 0 20px 0;
+      margin: 0 0 16px 0 !important;
+      padding-top: 0 !important;
       color: #1f2937;
       font-size: 18px;
       font-weight: 600;
     }
+    .data-table h3 + div {
+      margin-top: 0 !important;
+    }
+    .data-table h3 + table {
+      margin-top: 0 !important;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
+      margin-top: 0 !important;
+      vertical-align: top;
     }
     thead {
       background: #f8fafc;
@@ -365,7 +384,6 @@
     <!-- Tab Navigation -->
     <div class="tab-navigation">
       <button class="tab-button active" data-tab="overview">📊 Overview</button>
-      <button class="tab-button" data-tab="teaching">👨‍🏫 Teaching</button>
       <button class="tab-button" data-tab="research">🔬 Research</button>
       <button class="tab-button" data-tab="service">🤝 Service</button>
       <button class="tab-button" data-tab="professional">🎓 Professional</button>
@@ -398,41 +416,19 @@
         </div>
       </div>
 
-      <!-- Charts -->
-      <div class="chart-row">
-        <div class="chart-container">
+      <!-- Main Content Row -->
+      <div class="chart-row" style="gap: 16px;">
+        <div class="chart-container" style="flex: 1;">
           <h3>Performance Radar</h3>
           <canvas id="radar"></canvas>
         </div>
-        <div class="chart-container">
-          <h3>Score Trend</h3>
-          <canvas id="timeSeries"></canvas>
+        <div class="data-table" style="margin-bottom: 0; flex: 1;">
+          <h3>Courses Taught</h3>
+          <div id="coursesTable" class="loading">
+            <div class="spinner"></div>
+            Loading courses...
+          </div>
         </div>
-      </div>
-
-    <!-- Peer Comparison -->
-    <div class="chart-container">
-      <h3>Peer Comparison</h3>
-      <div id="comparisonData" class="loading">
-        <div class="spinner"></div>
-        Loading comparison data...
-      </div>
-    </div>
-    </div>
-
-    <!-- Tab: Teaching -->
-    <div class="tab-content" id="tab-teaching">
-      <div class="data-table">
-        <h3>Courses Taught</h3>
-        <div id="coursesTable" class="loading">
-          <div class="spinner"></div>
-          Loading courses...
-        </div>
-      </div>
-
-      <div class="chart-container">
-        <h3>Student Evaluation Trends</h3>
-        <canvas id="studentEvalChart"></canvas>
       </div>
     </div>
 
@@ -495,7 +491,7 @@
 
     <!-- Tab: Career -->
     <div class="tab-content" id="tab-career">
-      <div class="chart-container">
+      <div class="data-table">
         <h3>Employment Timeline</h3>
         <div id="careerTimeline" class="loading">
           <div class="spinner"></div>
