feat: add PD recommendations

--- a/evaluation-service/frontend/overview.html
+++ b/evaluation-service/frontend/overview.html
@@ -550,6 +550,14 @@
           Loading documents...
         </div>
       </div>
+
+      <div class="data-table" style="background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border: 2px solid #f59e0b;">
+        <h3 style="color: #92400e; margin-bottom: 16px;">🎯 Recommended for You</h3>
+        <div id="recommendationsArea" class="loading">
+          <div class="spinner"></div>
+          Loading recommendations...
+        </div>
+      </div>
     </div>
 
     <!-- Tab: Career -->
