--- a/evaluation-service/frontend/overview.html
+++ b/evaluation-service/frontend/overview.html
@@ -460,6 +460,17 @@
           </div>
         </div>
       </div>
+
+      <!-- Performance Prediction Row -->
+      <div class="chart-row" style="gap: 24px; margin-top: 24px;">
+        <div class="chart-container" style="flex: 1;">
+          <h3>Performance Prediction</h3>
+          <div id="predictionChart" class="loading">
+            <div class="spinner"></div>
+            Loading predictions...
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Tab: Research -->
